app/src/main/java/com/example/eltory/rejectcall/ContactBean.java
package com.example.eltory.rejectcall;

/**
 * Created by eltory on 2017-05-10.
 */
public class ContactBean {
    private String name;
    private String number;

    public void setName(String name) {
        this.name = name;
    }

    public String getName() {
        return name;
    }

    public void setNumber(String number) {
        this.number = number;
    }

    public String getNumber() {
        return number;
    }
}